--- a/website/.vercel/output/static/index.html
+++ b/website/.vercel/output/static/index.html
@@ -1,4 +1,4 @@
 <h1>Vercel Image Optimization Example</h1>
 <div>
-  <img src="/_vercel/image?url=%2Fimages%2Ftest.png&w=1000&q=75" width="500" height="375" />
+  <img src="/_vercel/image?url=%2Ftest.png&w=1000&q=75" width="500" height="375" />
 </div>
